--- a/.github/tekton/pipeline.yaml
+++ b/.github/tekton/pipeline.yaml
@@ -10,6 +10,7 @@ spec:
       type: string
   workspaces:
     - name: workspace
+    - name: ssh-creds
   tasks:
     - name: fetch-source
       taskRef:
@@ -23,17 +24,19 @@ spec:
       workspaces:
         - name: output
           workspace: workspace
-    - name: build-app
-      runAfter: ["fetch-source"]
-      taskRef:
-        name: build-app
-      workspaces:
-        - name: source
-          workspace: workspace
-    - name: build-image
-      runAfter: ["build-app"]
-      taskRef:
-        name: build-image
-      workspaces:
-        - name: source
-          workspace: workspace
+        - name: ssh-directory
+          workspace: ssh-creds
+    #- name: build-app
+    #  runAfter: ["fetch-source"]
+    #  taskRef:
+    #    name: build-app
+    #  workspaces:
+    #    - name: source
+    #      workspace: workspace
+    #- name: build-image
+    #  runAfter: ["build-app"]
+    #  taskRef:
+    #    name: build-image
+    #  workspaces:
+    #    - name: source
+    #      workspace: workspace
