--- a/.github/tekton/pipelinerun.yaml
+++ b/.github/tekton/pipelinerun.yaml
@@ -22,5 +22,8 @@ spec:
           resources:
             requests:
               storage: 1Gi
+    - name: ssh-creds
+      secret:
+        secretName: ssh-credential
     - name: varlibcontainers
       emptyDir: {}
