--- a/.github/tekton/pipelinerun.yaml
+++ b/.github/tekton/pipelinerun.yaml
@@ -22,8 +22,8 @@ spec:
           resources:
             requests:
               storage: 1Gi
-    - name: ssh-creds
+    - name: git-credentials
       secret:
-        secretName: ssh-credential
+        secretName: git-credentials
     - name: varlibcontainers
       emptyDir: {}
