--- a/.github/tekton/pipeline.yaml
+++ b/.github/tekton/pipeline.yaml
@@ -60,6 +60,9 @@ spec:
       runAfter: ["set-tag-manifest-deployment"]
       taskRef: 
         name: push-git-manifest-deployment
+      params:
+        - name: TAG
+          value: $(tasks.image-build-push.results.TAG)
       workspaces:
         - name: source
           workspace: workspace
