--- a/.github/tekton/tasks.yaml
+++ b/.github/tekton/tasks.yaml
@@ -117,6 +117,9 @@ spec:
   workspaces:
     - name: source
     - name: ssh-directory
+  params:
+    - name: TAG
+      type: string
   steps:
     - name: push-git
       image: alpine/git
@@ -134,6 +137,9 @@ spec:
         eval $(ssh-agent)
         ssh-add ~/.ssh/id_*
 
+        git config --global --add safe.directory /workspace/source
         git config --global user.email "tekton@tekton.dev"
         git config --global user.name "Tekton Pipeline"
         git add .
+        git commit -m "[Tekton] - Updated TaskRun $(params.TAG)"
+        git push
