--- a/.github/tekton/tasks.yaml
+++ b/.github/tekton/tasks.yaml
@@ -118,6 +118,8 @@ spec:
     - name: source
     - name: ssh-directory
   params:
+    - name: revision
+      type: string
     - name: TAG
       type: string
   steps:
@@ -142,4 +144,4 @@ spec:
         git config --global user.name "Tekton Pipeline"
         git add .
         git commit -m "[Tekton] - Updated TaskRun $(params.TAG)"
-        git push
+        git push -o HEAD:$(params.revision)
