--- a/.github/tekton/tasks.yaml
+++ b/.github/tekton/tasks.yaml
@@ -144,4 +144,4 @@ spec:
         git config --global user.name "Tekton Pipeline"
         git add .
         git commit -m "[Tekton] - Updated TaskRun $(params.TAG)"
-        git push -o HEAD:$(params.revision)
+        git push origin HEAD:$(params.revision)
