--- a/k8s/kustomize.yaml
+++ b/k8s/kustomize.yaml
@@ -2,8 +2,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - deployment.yaml
-  - route.yaml
-  - service.yaml
+  #- route.yaml
+  #- service.yaml
 images:
   - name: image
     newName: image-registry.openshift-image-registry.svc:5000/pida-diego/app
