--- a/.github/tekton/tasks.yaml
+++ b/.github/tekton/tasks.yaml
@@ -104,9 +104,8 @@ spec:
       image: alpine
       workingDir: $(workspaces.source.path)/k8s
       script: |
-        sed -i "s/newName.*/newName: image-registry.openshift-image-registry.svc:5000\/$(params.PROJECT)\/$(params.APPLICATION)/" kustomize.yaml
-        sed -i "s/newTag.*/newTag: $(params.TAG)/" kustomize.yaml
-        cat kustomize.yaml
+        sed -i "s/- image:*/- image: image-registry.openshift-image-registry.svc:5000\/$(params.PROJECT)\/$(params.APPLICATION):$(params.TAG)/" deployment.yaml
+        cat deployment.yaml
 ---
 apiVersion: tekton.dev/v1beta1
 kind: Task
