--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -17,14 +17,8 @@ spec:
         app: app
     spec:
       containers:
-      - image: image
-        name: app
-        ports:
-        - containerPort: 8080
-        resources:
-          limits:
-            cpu: 200m
-            memory: 128Mi
-          requests:
-            cpu: 100m
-            memory: 64Mi
+        - image: image-registry.openshift-image-registry.svc:5000/pida-diego/app:0f43ec7b-e056-4d35-ad9c-2ace065216ef
+          name: app
+          ports:
+          - containerPort: 8080
+          resources: {}
