--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -17,7 +17,7 @@ spec:
         app: app
     spec:
       containers:
-        - image:
+        - image: image-registry.openshift-image-registry.svc:5000/pida-diego/app:fcd9dc11-982a-453d-915c-c079eae3e53a
           name: app
           ports:
           - containerPort: 8080
