[Tekton] - Updated TaskRun 451df296-0425-4eb8-a1e0-e9f91bfa8df6

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -17,7 +17,7 @@ spec:
         app: app
     spec:
       containers:
-        - image: image-registry.openshift-image-registry.svc:5000/pida-diego/app:36f1c11a-0d36-4d60-9888-454283e5a49f image-registry.openshift-image-registry.svc:5000/pida-diego/app:7000f397-6b23-426e-999f-d4bb88e1ef95 image-registry.openshift-image-registry.svc:5000/pida-diego/app:069bdbf6-8f4a-40e4-ad46-43afe6b0d563 image-registry.openshift-image-registry.svc:5000/pida-diego/app:5f928729-9ea5-49c4-9ea5-09fc91850b2f image-registry.openshift-image-registry.svc:5000/pida-diego/app:fb76fe07-2b28-4487-8645-4e928b14e537 image-registry.openshift-image-registry.svc:5000/pida-diego/app:fcd9dc11-982a-453d-915c-c079eae3e53a
+        - image: image-registry.openshift-image-registry.svc:5000/pida-diego/app:451df296-0425-4eb8-a1e0-e9f91bfa8df6
           name: app
           ports:
           - containerPort: 8080
