--- a/.github/argocd/application.yaml
+++ b/.github/argocd/application.yaml
@@ -9,7 +9,7 @@ spec:
     namespace: ''
     server: 'https://kubernetes.default.svc'
   source:
-    path: tmp
+    path: k8s
     repoURL: 'git@github.com:diegomacielp/tekton-pipeline.git'
     targetRevision: main
   sources: []
@@ -17,4 +17,6 @@ spec:
   syncPolicy:
     automated:
       prune: true
-      selfHeal: false
+      selfHeal: true
+    syncOptions:
+      - Replace=true
